# platform.core.connectivity.data-router

./: AUTHORS  CMakeLists.txt  project.config
debian/: changelog  control  rules
include/: dr-common.h  dr-ipc.h  dr-main.h  dr-modem.h  dr-noti-handler.h  dr-parser.h  dr-usb.h  dr-util.h
packaging/: data-router.changes  data-router.spec
src/: dr-common.c  dr-ipc.c  dr-main.c  dr-modem.c  dr-noti-handler.c  dr-parser.c  dr-usb.c  dr-util.c
